--- a/webroot/scss/globals.scss
+++ b/webroot/scss/globals.scss
@@ -4,18 +4,15 @@ body {
   background-repeat:no-repeat;
   background-position:fixed;
 }
-ul {
-  li {
-    list-style-type: none;
-  }
-}
+
+li { list-style-type: none  !important; }
 
 button.unavailable {
   background-color:rgb(225,225,225);
   background-image:url("../img/order_coming_soon.png");
   @include portraitBG;
 }
-.tight { @include tightContent();}
+
 .hidden { display:none;}
 .inline { display: inline-block;}
 .true-hidden {
@@ -23,6 +20,35 @@ button.unavailable {
   display:none;
   opacity:none;
 }
+
+.flush {
+  padding:0;
+  margin:0;
+}
+.b-pad { padding: $base-padding;}
+.m-pad { padding: $medium-padding;}
+.t-pad { padding: $tight-padding;}
+
+.stretch { width:100%;}
+.box {
+  position: absolute;
+  left:0;
+  top:0;
+  &.rightward {
+    left:auto;
+    right:0;
+  }
+  &.downard { top:default; bottom: 0;}
+  &.leftward { top: auto;}
+  &.rel { position: relative; }
+  .abs {
+    left: default;
+    right: default;
+    top: default;
+    bottom: default;
+  }
+}
+
 #xtreme-modal {
   position: fixed;
   top: 100px;
@@ -34,4 +60,82 @@ button.unavailable {
   background-color: $xtreme-blue;
   box-shadow: 0 0 64px $black-a33;
   h1 { color:$dark-grey; }
+}
+
+//FRAMES & CONTAINERS
+section { margin-bottom : 1rem; }
+.block { display: block; }
+.float-pane {
+  border:$float-pane-border-width solid $white;
+  box-shadow:$float-pane-shadow-offset $float-pane-shadow-offset $float-pane-shadow-size $black-a66;
+}
+section.pagespan {
+  height            : $focus-pane-height;
+  margin-top        : rem-calc(15);
+  background-repeat : no-repeat;
+  background-size   : cover;
+}
+
+.l-0 { z-index : 9999; }
+.l-1 { z-index : 9000; }
+.l-2 { z-index : 8000; }
+.l-2-1 { z-index : 8001; }
+.l-2-2 { z-index : 8002; }
+.l-3 { z-index : 7000; }
+
+footer {
+  position:relative;
+  background-color:$dark-grey;
+  height: $footer-height;
+  margin-top: $footer-top-margin;
+}
+.spacer { @include unselectable; }
+
+// DECORATION CLASSES
+.xtreme-blue-bg { background-color : $xtreme-blue; }
+
+.xtreme-select-list {
+  text-align:center;
+  background-color: $xtreme-blue;
+  &:hover { background-color : lighten($xtreme-blue, 15%) }
+  &.active { background-color:$xtreme-yellow; }
+  a, h1, h2, h3, h4, h5, span { color: $white;}
+  &.active {
+    a, h1, h2, h3, h4, h5, span { color: $dark-grey;}
+  }
+}
+
+@mixin blue_scroll () {
+  &::-webkit-scrollbar-track {
+        box-shadow       : inset 0 0 3px rgba(0, 0, 0, 0.3);
+        border-radius    : 4px;
+        background-color : $white;
+      }
+      &::-webkit-scrollbar {
+        width            : $medium-padding;
+        background-color : $white;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius    : 4px;
+        background-color : $xtreme-blue;
+      }
+}
+
+@mixin grey_scroll () {
+  &::-webkit-scrollbar-track {
+        box-shadow       : inset 3px 0 5px rgba(0, 0, 0, 0.5);
+//        border-radius    : 4px;
+        background-color : darken($xtreme-blue, 20%);
+      }
+      &::-webkit-scrollbar {
+        width            : $medium-padding;
+        background-color : $white;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius    : 4px;
+        box-shadow: inset 0 0 8px rgba(0,0,0,.33);
+        border-right: 2px solid darken($medium-grey, 3%);
+        border-bottom: 2px solid $medium-grey;
+        background-color : $white;
+      }
 }
