--- a/webroot/scss/palette.scss
+++ b/webroot/scss/palette.scss
@@ -31,6 +31,7 @@ $dark-grey: rgb(25,25,25);
 $transparent: rgba(0,0,0,0);
 // GRADIENTS
 @mixin orb-card-gradient() {
+  background-color           : $orb-card-stage-grey;
   background                 : #f5f5f5; /* Old browsers */
     background                 : -moz-linear-gradient(45deg, #f5f5f5 0%, #969696 100%); /* FF3.6+ */
     background                 : -webkit-gradient(linear, left bottom, right top, color-stop(0%, #f5f5f5), color-stop(100%, #969696)); /* Chrome,Safari4+ */
