--- a/webroot/scss/templates/menu.scss
+++ b/webroot/scss/templates/menu.scss
@@ -14,7 +14,8 @@ body {
 * { transition : background-color $global-transition-time ease-in-out,
 background-image $global-transition-time ease-in-out,
 color $global-transition-time ease-in-out,
-opacity $global-transition-time ease-in-out; }
+opacity $global-transition-time ease-in-out,
+transform $global-transition-time ease-in-out; }
 
 
 main#menu {
@@ -24,7 +25,6 @@ main#menu {
   overflow    : auto;
 }
 
-// in use; content area
 
 /**************************************************************
 
@@ -135,279 +135,4 @@ li.orbcat {
                        ORB LIST / ORB CARD STAGE / ORB CARD
 
 ***************************************************************/
-#orb-card-wrapper {
-  height : $orb-card-wrapper-height;
-  width  : $orb-card-wrapper-width; // active orbs floats right (ie. this - orbcard stage = visible space for active orbs)
-  margin : $orb-card-wrapper-margin;
-}
 
-#orb-card-container {
-  left                       : -1 * $float-pane-border-width;
-  top                        : -0.9 * $float-pane-border-width;
-  width                      : $orb-card-container-width;
-  border                     : $orb-card-stage-border;
-  border-top-right-radius    : $global-rounded;
-  border-bottom-right-radius : $global-rounded;
-  height                     : $orb-card-stage-height;
-  @include orb-card-gradient;
-  padding                    : $orb-card-margin;
-}
-
-// FLOAT LABELS
-.float-label {
-  visibility               : hidden;
-  width                    : $float-label-width;
-  height                   : $float-label-height;
-  -webkit-transform-origin : 100% 0;
-  -moz-transform-origin    : 100% 0;
-  -ms-transform-origin     : 100% 0;
-  -o-transform-origin      : 100% 0;
-  transform-origin         : 100% 0;
-  -webkit-transform        : $float-label-transform;
-  -moz-transform           : $float-label-transform;
-  -o-transform             : $float-label-transform;
-  transform                : $float-label-transform;
-  text-shadow              : 0 0 rem-calc(6px) $black-a33;
-  transition               : visibility 150ms, margin-left 150ms;
-  &.exposed {
-    visibility  : visible;
-    margin-left : -1 * $float-label-height;
-  }
-}
-#orb-card-stage {
-  height: $orb-card-stage-height;
-  width: $orb-card-stage-width;
-  &.retracted {
-      width: $orb-card-container-width;
-    }
-}
-
-div#orb-card {
-  height : $orb-card-height;
-  width  : $orb-card-width;
-  // todo: consider putting the shadow back in; then move this BG color up to the orb-card, not the section
-  section { background-color : $white; }
-
-  .triangle {
-    position     : absolute;
-    bottom       : $triangle-extrude-position;
-    left         : $triangle-center-position;
-    width        : 0;
-    height       : 0;
-    border-left  : $triangle-border-width solid transparent;
-    border-right : $triangle-border-width solid transparent;
-    margin-left  : auto;
-    margin-left  : right;
-    &.tr-right {
-      right             : $triangle-extrude-position * 1.333333; // on account of the rotation
-      top               : $triangle-center-position * 1.333333;
-      -webkit-transform : rotate(-90deg);
-      -moz-transform    : rotate(-90deg);
-      -o-transform      : rotate(-90deg);
-      transform         : rotate(-90deg);
-    }
-  }
-
-  .orb-card-row {
-    height        : $orb-card-row-height;
-    margin-bottom : $float-pane-margin;
-  }
-
-  ul.orb-card {
-    div.orb-card-button {
-      position            : relative; // remove after fixing triangles
-      vertical-align      : top;
-      width               : $orb-card-button-width;
-      height              : $orb-card-button-height;
-      background-repeat   : no-repeat;
-      background-position : center;
-      cursor              : pointer;
-
-      &#favorite {
-        background-color : $xtreme-yellow;
-        background-image : url('../img/orb_card.icon.fav.png');
-        .triangle { border-top : $triangle-border-width solid $xtreme-yellow; }
-      }
-      &#order {
-        background-color : $xtreme-red;
-        background-image : url('../img/orb_card.icon.cart.png');
-        .triangle { border-top : $triangle-border-width solid $xtreme-red; }
-      }
-      &#like {
-        background-color : $xtreme-blue;
-        background-image : url('../img/orb_card.icon.like.png');
-        .triangle { border-top : $triangle-border-width solid $xtreme-blue; }
-      }
-      transition          : background-color $global-transition-time;
-      .triangle { transition : border-top-color $global-transition-time; }
-      &#favorite:hover, &#order:hover, &#like:hover {
-        background-color : $light-grey;
-        .triangle { border-top-color : $light-grey; }
-      }
-    }
-  }
-}
-
-div.orb-card-content {
-  width       : $orb-card-content-width;
-  margin-left : $float-pane-margin;
-  position    : relative; // only necessary for floating orb title; remove if you fix that
-  height      : $orb-card-row-height;
-
-  &#description {
-    background-color : $light-grey;
-    padding          : $medium-padding;
-  }
-  &#price-matrix {
-    ul {
-      margin-top : -6px;
-      height     : $price-matrix-max-height;
-      overflow-y : auto;
-      @include blue_scroll;
-    }
-    li:hover { background-color : $very-light-grey; }
-
-    h5 { height : $price-matrix-header-height; }
-    h5, li div {
-      width   : 50%;
-      padding : 0;
-      margin  : 0;
-      display : inline-block;
-      padding : $price-matrix-header-padding;
-    }
-    h5:last-of-type { padding-right : $orb-card-price-table-padding-right; }
-    &#orb-card-options { background-color : $text-grey; }
-  }
-}
-
-.orb-card-stage-menu-header {
-  height : $orb-card-stage-menu-item-height;
-  width  : $orb-card-stage-menu-width;
-  h2, ul {
-  padding-left : $orb-card-stage-menu-padding-left;
-    background-color : $xtreme-red;
-    margin           : 0;
-    border-bottom:6px solid $white;
-  }
-}
-
-.orb-card-stage-menu {
-  overflow-y : scroll;
-  overflow-x : hidden;
-  height     : $orb-card-stage-menu-height;
-  width:$orb-card-stage-menu-width;
-  @include grey_scroll;
-  .menu-shadow { box-shadow : inset 15px -5px 8px $black-a33; }
-  li {
-    padding-left : $orb-card-stage-menu-padding-left;
-    height       : $orb-card-stage-menu-item-height;
-    cursor       : pointer;
-  }
-}
-
-li.topping {
-  padding-left:0;
-  padding-right : $topping-right-padding;
-  li {
-    box-shadow        : none;
-    background-color  : transparent;
-    margin            : 0;
-    width             : $topping-icon-button-width;
-    height            : $orb-card-stage-menu-item-height;
-    float             : right;
-    padding           : $topping-icon-full-padding;
-    background-size   : auto;
-    background-repeat : no-repeat;
-    &:hover, &.active { background-color : transparent; }
-    &.topping-coverage {
-      color      : $white;
-      opacity    : 0.33;
-    }
-    &:last-of-type {
-      width        : $topping-text-width;
-      padding-left : $orb-card-stage-menu-padding-left;
-    }
-  }
-  &.active {
-    li.topping-coverage {
-      opacity : 1;
-      &.active, &:hover { color : $black; }
-    }
-  }
-}
-
-#toppings-filter {
-  width            : $orb-card-stage-menu-width;
-  height           : $orb-card-stage-menu-item-height;
-  padding          : $tight-padding;
-  padding-left     : $topping-filter-padding-left;
-  float            : right;
-  background-color : $xtreme-red;
-  li {
-    background-color : transparent;
-    width            : $topping-filter-button-width;
-    height           : $topping-filter-button-height;
-  }
-}
-
-.orb-size-panel li {
-    padding-bottom : 0;
-    padding-top: 0;
-    h3 { height: 1.333333 * $h3-font-size;}
-    &:first-of-type { padding-left : 0; }
-    &:last-of-type { padding-right : 0; }
-    &.active h3 { background-color: $xtreme-yellow}
-}
-
-#order-details {
-  & > div { vertical-align : top; }
-  #orb-order-form { width : $orb-configure-form-width; }
-  #tiny-toppings-list {
-    padding  : $tight-padding;
-    width    : $tiny-topping-list-width;
-    height   : rem-calc(65px);
-    overflow : hidden;
-    ul { margin : 0; }
-    li {
-      float            : left;
-      display          : inline-block;
-      padding          : 0 $tight-padding;
-      margin           : 1px;
-      height           : rem-calc(16px);
-      background-color : $light-grey;
-    }
-  }
-}
-
-.orb-opt-configure-header {
-  background-color : $xtreme-red;
-  padding          : $tight-padding + 0.25 * $h3-font-size  0 $tight-padding $base-padding;
-  line-height      : $h3-font-size;
-}
-
-#OrderOrbPreparationInstructions-wrapper { width : rem-calc(175px); }
-
-#OrderOrbQuantity-wrapper { width : rem-calc(60px); }
-
-input#orderOrbQuantity { width : 3rem; }
-
-#order-modal {
-  height      : $order-modal-height;
-  width       : $orb-card-wrapper-inner-width + rem-calc(2px);
-  top         : $order-modal-top;
-  overflow-x  : hidden;
-  z-index     : 8999;
-  margin-left : rem-calc(-2px);
-
-  #order-modal-content {
-    margin-top       : $order-modal-content-shadow-size;
-    height           : $order-modal-content-height;
-    width            : $orb-card-wrapper-width;
-    background-color : $white-a90;
-    box-shadow       : 0 0 $base-padding $black-a33;
-    padding          : $tight-padding;
-    border-top       : 1px solid $text-grey;
-    border-bottom    : 1px solid $text-grey;
-    li { padding : 0; }
-  }
-}
